services/rsc/nginx-admin/nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-admin-deployment
  namespace: nginx-admin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-admin
  template:
    metadata:
      labels:
        app: nginx-admin
    spec:
      containers:
      - name: nginx-admin
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: admin-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: admin-html
        configMap:
          name: nginx-admin-index
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-admin-service
  namespace: nginx-admin
spec:
  type: ClusterIP
  selector:
    app: nginx-admin
  ports:
  - port: 80
    targetPort: 80
